--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,3 +12,44 @@ title = {Challenges of continuum robots in clinical context: a review},
 journal = {Progress in Biomedical Engineering},
 abstract = {With the maturity of surgical robotic systems based on traditional rigid-link principles, the rate of progress slowed as limits of size and controllable degrees of freedom were reached. Continuum robots came with the potential to deliver a step change in the next generation of medical devices, by providing better access, safer interactions and making new procedures possible. Over the last few years, several continuum robotic systems have been launched commercially and have been increasingly adopted in hospitals. Despite the clear progress achieved, continuum robots still suffer from design complexity hindering their dexterity and scalability. Recent advances in actuation methods have looked to address this issue, offering alternatives to commonly employed approaches. Additionally, continuum structures introduce significant complexity in modelling, sensing, control and fabrication; topics which are of particular focus in the robotics community. It is, therefore, the aim of the presented work to highlight the pertinent areas of active research and to discuss the challenges to be addressed before the potential of continuum robots as medical devices may be fully realised.}
 }
+
+@ARTICLE{Pittiglio2019,
+  author={Pittiglio, Giovanni and Barducci, Lavinia and Martin, James W. and Norton, Joseph C. and Avizzano, Carlo A. and Obstein, Keith L. and Valdastri, Pietro},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Magnetic Levitation for Soft-Tethered Capsule Colonoscopy Actuated With a Single Permanent Magnet: A Dynamic Control Approach}, 
+  year={2019},
+  volume={4},
+  number={2},
+  pages={1224-1231},
+  doi={10.1109/LRA.2019.2894907}}
+
+@ARTICLE{Barducci2019,
+  author={Barducci, Lavinia and Pittiglio, Giovanni and Norton, Joseph C. and Obstein, Keith L. and Valdastri, Pietro},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Adaptive Dynamic Control for Magnetically Actuated Medical Robots}, 
+  year={2019},
+  volume={4},
+  number={4},
+  pages={3633-3640},
+  doi={10.1109/LRA.2019.2928761}}
+
+@article{Pittiglio2021,
+author = {Pittiglio, Giovanni and Lloyd, Peter and da Veiga, Tomas and Onaizah, Onaizah and Pompili, Cecilia and Chandler, James H. and Valdastri, Pietro},
+title = {Patient-Specific Magnetic Catheters for Atraumatic Autonomous Endoscopy},
+journal = {Soft Robotics},
+volume = {9},
+number = {6},
+pages = {1120-1133},
+year = {2022},
+doi = {10.1089/soro.2021.0090},
+    note ={PMID: 35312350},
+URL = { 
+        https://doi.org/10.1089/soro.2021.0090 
+},
+eprint = { 
+    
+        https://doi.org/10.1089/soro.2021.0090
+}
+,
+    abstract = { Despite increasing interest in minimally invasive surgical techniques and related developments in flexible endoscopes and catheters, follow-the-leader motion remains elusive. Following the path of least resistance through a tortuous and potentially delicate environment without relying on interaction with the surrounding anatomy requires the control of many degrees of freedom. This typically results in large-diameter instruments. One viable solution to obtain dexterity without increasing size is via multiple-point magnetic actuation over the length of the catheter. The main challenge of this approach is planning magnetic interaction to allow the catheter to adapt to the surrounding anatomy during navigation. We design and manufacture a fully shape-forming, soft magnetic catheter of 80 mm length and 2 mm diameter, capable of navigating a human anatomy in a follow-the-leader fashion. Although this system could be exploited for a range of endoscopic or intravascular applications, here we demonstrate its efficacy for navigational bronchoscopy. From a patient-specific preoperative scan, we optimize the catheters’ magnetization profiles and the shape-forming actuating field. To generate the required transient magnetic fields, a dual-robot arm system is employed. We fabricate three separate prototypes to demonstrate minimal contact navigation through a three-dimensional bronchial tree phantom under precomputed robotic control. We also compare a further four separate optimally designed catheters against mechanically equivalent designs with axial magnetization profiles along their length and only at the tip. Using our follow-the-leader approach, we demonstrate up to 50\% more accurate tracking, 50\% reduction in obstacle contact time during navigation over the state of the art, and an improvement in targeting error of 90\%. }
+}
