--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,3 +53,43 @@ eprint = {
 ,
     abstract = { Despite increasing interest in minimally invasive surgical techniques and related developments in flexible endoscopes and catheters, follow-the-leader motion remains elusive. Following the path of least resistance through a tortuous and potentially delicate environment without relying on interaction with the surrounding anatomy requires the control of many degrees of freedom. This typically results in large-diameter instruments. One viable solution to obtain dexterity without increasing size is via multiple-point magnetic actuation over the length of the catheter. The main challenge of this approach is planning magnetic interaction to allow the catheter to adapt to the surrounding anatomy during navigation. We design and manufacture a fully shape-forming, soft magnetic catheter of 80 mm length and 2 mm diameter, capable of navigating a human anatomy in a follow-the-leader fashion. Although this system could be exploited for a range of endoscopic or intravascular applications, here we demonstrate its efficacy for navigational bronchoscopy. From a patient-specific preoperative scan, we optimize the catheters’ magnetization profiles and the shape-forming actuating field. To generate the required transient magnetic fields, a dual-robot arm system is employed. We fabricate three separate prototypes to demonstrate minimal contact navigation through a three-dimensional bronchial tree phantom under precomputed robotic control. We also compare a further four separate optimally designed catheters against mechanically equivalent designs with axial magnetization profiles along their length and only at the tip. Using our follow-the-leader approach, we demonstrate up to 50\% more accurate tracking, 50\% reduction in obstacle contact time during navigation over the state of the art, and an improvement in targeting error of 90\%. }
 }
+
+@INPROCEEDINGS{Pittiglio2020,
+  author={Pittiglio, Giovanni and Chandler, James H. and Richter, Michiel and Venkiteswaran, Venkatasubramanian K. and Misra, Sarthak and Valdastri, Pietro},
+  booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={Dual-Arm Control for Enhanced Magnetic Manipulation}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={7211-7218},
+  doi={10.1109/IROS45743.2020.9341250}}
+
+@ARTICLE{Pittiglio2023,
+  author={Pittiglio, Giovanni and Brockdorff, Michael and da Veiga, Tomas and Davy, Joshua and Chandler, James Henry and Valdastri, Pietro},
+  journal={IEEE Transactions on Robotics}, 
+  title={Collaborative Magnetic Manipulation via Two Robotically Actuated Permanent Magnets}, 
+  year={2023},
+  volume={39},
+  number={2},
+  pages={1407-1418},
+  doi={10.1109/TRO.2022.3209038}}
+
+@INPROCEEDINGS{Lloyd2020,
+  author={Lloyd, Peter and Pittiglio, Giovanni and Chandler, James H. and Valdastri, Pietro},
+  booktitle={2020 International Symposium on Medical Robotics (ISMR)}, 
+  title={Optimal Design of Soft Continuum Magnetic Robots under Follow-the-leader Shape Forming Actuation}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={111-117},
+  doi={10.1109/ISMR48331.2020.9312943}}
+
+@INPROCEEDINGS{DaVeiga2021,
+  author={Da Veiga, Tomás and Chandler, James H. and Pittiglio, Giovanni and Lloyd, Peter and Holdar, Mohammad and Onaizah, Onaizah and Alazmani, Ali and Valdastri, Pietro},
+  booktitle={2021 IEEE 4th International Conference on Soft Robotics (RoboSoft)}, 
+  title={Material Characterization for Magnetic Soft Robots}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={335-342},
+  doi={10.1109/RoboSoft51838.2021.9479189}}
