--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -93,3 +93,69 @@ eprint = {
   number={},
   pages={335-342},
   doi={10.1109/RoboSoft51838.2021.9479189}}
+
+@ARTICLE{Lloyd2022,
+  author={Lloyd, Peter and Onaizah, Onaizah and Pittiglio, Giovanni and Vithanage, Damith Katudampe and Chandler, James H. and Valdastri, Pietro},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Magnetic Soft Continuum Robots With Braided Reinforcement}, 
+  year={2022},
+  volume={7},
+  number={4},
+  pages={9770-9777},
+  doi={10.1109/LRA.2022.3191552}}
+
+@INPROCEEDINGS{Pittiglio2018,
+  author={Pittiglio, Giovanni and Kogkas, Alexandros and Vrielink, Joric Oude and Mylonas, George},
+  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Dynamic Control of Cable Driven Parallel Robots with Unknown Cable Stiffness: a Joint Space Approach}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={948-955},
+  doi={10.1109/ICRA.2018.8460822}}
+
+@ARTICLE{Pittiglio2023,
+  author={Pittiglio, Giovanni and Orekhov, Andrew L. and da Veiga, Tomas and Calò, Simone and Chandler, James H. and Simaan, Nabil and Valdastri, Pietro},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Closed Loop Static Control of Multi-Magnet Soft Continuum Robots}, 
+  year={2023},
+  volume={8},
+  number={7},
+  pages={3980-3987},
+  doi={10.1109/LRA.2023.3274431}}
+
+@ARTICLE{daVeiga2023,
+  author={da Veiga, Tomás and Pittiglio, Giovanni and Brockdorff, Michael and Chandler, James H. and Valdastri, Pietro},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Six-Degree-of-Freedom Localization Under Multiple Permanent Magnets Actuation}, 
+  year={2023},
+  volume={8},
+  number={6},
+  pages={3422-3429},
+  doi={10.1109/LRA.2023.3268588}}
+
+﻿@Article{Pittiglio2023,
+author={Pittiglio, Giovanni
+and Chandler, James H.
+and da Veiga, Tomas
+and Koszowska, Zaneta
+and Brockdorff, Michael
+and Lloyd, Peter
+and Barry, Katie L.
+and Harris, Russell A.
+and McLaughlan, James
+and Pompili, Cecilia
+and Valdastri, Pietro},
+title={Personalized magnetic tentacles for targeted photothermal cancer therapy in peripheral lungs},
+journal={Communications Engineering},
+year={2023},
+month={Jul},
+day={27},
+volume={2},
+number={1},
+pages={50},
+abstract={Lung cancer remains one of the most life-threatening diseases and is currently managed through invasive approaches such as surgery, chemo- or radiotherapy. In this work, we introduce a novel method for the targeted delivery of a therapeutic laser for the treatment of tumors in peripheral areas of the lungs. The approach uses a 2.4{\thinspace}mm diameter, ultra-soft, patient-specific magnetic catheter delivered from the end of a standard bronchoscope to reach the periphery of the lungs. Integrated shape sensing facilitates supervised autonomous full-shape control for precise navigation into the sub-segmental bronchi, and an embedded laser fiber allows for treatment via localized energy delivery. We report the complete navigation of eight primary lumina in the bronchi of an anatomically accurate phantom (developed from computed tomography (CT) data) and successful laser delivery for photothermal ablation. We further evaluate the approach in three diverse branches of excised cadaveric lungs, showing a mean improvement in navigation depth of 37{\%} with less tissue displacement when compared to a standard semi-rigid catheter and navigation depth repeatability across all tests of <1{\thinspace}mm.},
+issn={2731-3395},
+doi={10.1038/s44172-023-00098-9},
+url={https://doi.org/10.1038/s44172-023-00098-9}
+}
