--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -159,3 +159,39 @@ issn={2731-3395},
 doi={10.1038/s44172-023-00098-9},
 url={https://doi.org/10.1038/s44172-023-00098-9}
 }
+
+@ARTICLE{daVeiga2023,
+  author={da Veiga, Tomás and Pittiglio, Giovanni and Brockdorff, Michael and Chandler, James H. and Valdastri, Pietro},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Six-Degree-of-Freedom Localization Under Multiple Permanent Magnets Actuation}, 
+  year={2023},
+  volume={8},
+  number={6},
+  pages={3422-3429},
+  doi={10.1109/LRA.2023.3268588}}
+
+﻿@Article{Pittiglio2023,
+author={Pittiglio, Giovanni
+and Chandler, James H.
+and da Veiga, Tomas
+and Koszowska, Zaneta
+and Brockdorff, Michael
+and Lloyd, Peter
+and Barry, Katie L.
+and Harris, Russell A.
+and McLaughlan, James
+and Pompili, Cecilia
+and Valdastri, Pietro},
+title={Personalized magnetic tentacles for targeted photothermal cancer therapy in peripheral lungs},
+journal={Communications Engineering},
+year={2023},
+month={Jul},
+day={27},
+volume={2},
+number={1},
+pages={50},
+abstract={Lung cancer remains one of the most life-threatening diseases and is currently managed through invasive approaches such as surgery, chemo- or radiotherapy. In this work, we introduce a novel method for the targeted delivery of a therapeutic laser for the treatment of tumors in peripheral areas of the lungs. The approach uses a 2.4{\thinspace}mm diameter, ultra-soft, patient-specific magnetic catheter delivered from the end of a standard bronchoscope to reach the periphery of the lungs. Integrated shape sensing facilitates supervised autonomous full-shape control for precise navigation into the sub-segmental bronchi, and an embedded laser fiber allows for treatment via localized energy delivery. We report the complete navigation of eight primary lumina in the bronchi of an anatomically accurate phantom (developed from computed tomography (CT) data) and successful laser delivery for photothermal ablation. We further evaluate the approach in three diverse branches of excised cadaveric lungs, showing a mean improvement in navigation depth of 37{\%} with less tissue displacement when compared to a standard semi-rigid catheter and navigation depth repeatability across all tests of <1{\thinspace}mm.},
+issn={2731-3395},
+doi={10.1038/s44172-023-00098-9},
+url={https://doi.org/10.1038/s44172-023-00098-9}
+}
