--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -160,38 +160,66 @@ doi={10.1038/s44172-023-00098-9},
 url={https://doi.org/10.1038/s44172-023-00098-9}
 }
 
-@ARTICLE{daVeiga2023,
-  author={da Veiga, Tomás and Pittiglio, Giovanni and Brockdorff, Michael and Chandler, James H. and Valdastri, Pietro},
+@INPROCEEDINGS{Pittiglio2023a,
+  author={Pittiglio, Giovanni and Mencattelli, Margherita and Dupont, Pierre E.},
+  booktitle={2023 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Magnetic Ball Chain Robots for Endoluminal Interventions}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={4717-4723},
+  doi={10.1109/ICRA48891.2023.10160695}}
+
+@ARTICLE{Pittiglio2021,
+  author={Pittiglio, Giovanni and Calò, Simone and Valdastri, Pietro},
+  journal={IEEE Transactions on Automatic Control}, 
+  title={On the Observability and Observer Design on the Special Orthogonal Group Based on Partial Inertial Sensing}, 
+  year={2021},
+  volume={66},
+  number={10},
+  pages={4998-5005},
+  doi={10.1109/TAC.2020.3047553}}
+
+@article{Koszowska2023,
+author = {Koszowska, Zaneta and Brockdorff, Michael and da Veiga, Tomas and Pittiglio, Giovanni and Lloyd, Peter and Khan-White, Thomas and Harris, Russell A. and Moor, James W. and Chandler, James H. and Valdastri, Pietro},
+title = {Independently Actuated Soft Magnetic Manipulators for Bimanual Operations in Confined Anatomical Cavities},
+journal = {Advanced Intelligent Systems},
+volume = {n/a},
+number = {n/a},
+pages = {2300062},
+keywords = {bimanual actuation, endoscopic tools, ENT, magnetic robots, medical robotics, soft robots, surgical manipulators},
+doi = {https://doi.org/10.1002/aisy.202300062},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/aisy.202300062},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/aisy.202300062},
+abstract = {Soft magnetic manipulators offer the prospect of improved surgical outcomes through their potential for miniaturization and inherently safe tissue interaction. However, independent actuation of multiple manipulators within the same confined workspace is limited by undesired simultaneous actuation and manipulator–manipulator interactions. Herein, for the first time, approaches for the independent magnetic actuation of two magnetic continuum manipulators within the same confined workspace are proposed. A novel modular magnetic soft robot segment design is proposed with modified geometry to provide preferential bending planes and high angles of deflection. This design is integrated into two dual-segment magnetic manipulators which, when arranged in parallel, can deliver independent bending in two planes of motion. Two distinct independent control strategies are proposed, based on orthogonal manipulator magnetization profiles and local field gradient control, respectively. Each dual-manipulator configuration is characterized over a sequence of applied magnetic fields and gradients, induced via a dual robotically controlled external permanent magnet system. Manipulator independence, bending range of motion, and twisting behaviors are evaluated as a function of control strategy and manipulator separation distance. To demonstrate the system's potential in clinical scenarios, a dual-manipulator configuration is adapted to carry an endoscopic camera and optic fiber, respectively. The resultant bimanual system is deployed in the confined anatomy of a skull-base phantom to simulate minimally invasive ablation of a pituitary adenoma. Independent motion of the camera and tool within the confined workspace demonstrate the potential for an independent magnetic tool manipulation for surgical applications.}
+}
+
+@INPROCEEDINGS{Pittiglio2023b,
+  author={Pittiglio, Giovanni and Mencattelli, Margherita and Dupont, Pierre E.},
+  booktitle={2023 International Symposium on Medical Robotics (ISMR)}, 
+  title={Closed-form Kinematic Model and Workspace Characterization for Magnetic Ball Chain Robots}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-7},
+  doi={10.1109/ISMR57123.2023.10130219}}
+
+@INPROCEEDINGS{Davy2023,
+  author={Davy, Joshua and Da Veiga, Tomas and Pittiglio, Giovanni and Chandler, James H. and Valdastri, Pietro},
+  booktitle={2023 International Symposium on Medical Robotics (ISMR)}, 
+  title={Independent Control of Two Magnetic Robots using External Permanent Magnets: A Feasibility Study}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-7},
+  doi={10.1109/ISMR57123.2023.10130246}}
+
+@ARTICLE{Lloyd2023,
+  author={Lloyd, Peter and Thomas, Theodosia Lourdes and Venkiteswaran, Venkatasubramanian Kalpathy and Pittiglio, Giovanni and Chandler, James H. and Valdastri, Pietro and Misra, Sarthak},
   journal={IEEE Robotics and Automation Letters}, 
-  title={Six-Degree-of-Freedom Localization Under Multiple Permanent Magnets Actuation}, 
+  title={A Magnetically-Actuated Coiling Soft Robot With Variable Stiffness}, 
   year={2023},
   volume={8},
   number={6},
-  pages={3422-3429},
-  doi={10.1109/LRA.2023.3268588}}
-
-﻿@Article{Pittiglio2023,
-author={Pittiglio, Giovanni
-and Chandler, James H.
-and da Veiga, Tomas
-and Koszowska, Zaneta
-and Brockdorff, Michael
-and Lloyd, Peter
-and Barry, Katie L.
-and Harris, Russell A.
-and McLaughlan, James
-and Pompili, Cecilia
-and Valdastri, Pietro},
-title={Personalized magnetic tentacles for targeted photothermal cancer therapy in peripheral lungs},
-journal={Communications Engineering},
-year={2023},
-month={Jul},
-day={27},
-volume={2},
-number={1},
-pages={50},
-abstract={Lung cancer remains one of the most life-threatening diseases and is currently managed through invasive approaches such as surgery, chemo- or radiotherapy. In this work, we introduce a novel method for the targeted delivery of a therapeutic laser for the treatment of tumors in peripheral areas of the lungs. The approach uses a 2.4{\thinspace}mm diameter, ultra-soft, patient-specific magnetic catheter delivered from the end of a standard bronchoscope to reach the periphery of the lungs. Integrated shape sensing facilitates supervised autonomous full-shape control for precise navigation into the sub-segmental bronchi, and an embedded laser fiber allows for treatment via localized energy delivery. We report the complete navigation of eight primary lumina in the bronchi of an anatomically accurate phantom (developed from computed tomography (CT) data) and successful laser delivery for photothermal ablation. We further evaluate the approach in three diverse branches of excised cadaveric lungs, showing a mean improvement in navigation depth of 37{\%} with less tissue displacement when compared to a standard semi-rigid catheter and navigation depth repeatability across all tests of <1{\thinspace}mm.},
-issn={2731-3395},
-doi={10.1038/s44172-023-00098-9},
-url={https://doi.org/10.1038/s44172-023-00098-9}
-}
+  pages={3262-3269},
+  doi={10.1109/LRA.2023.3264770}}
