--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,6 +34,7 @@ abstract = {With the maturity of surgical robotic systems based on traditional r
   doi={10.1109/LRA.2019.2928761}}
 
 @article{Pittiglio2021,
+selected = {true},
 author = {Pittiglio, Giovanni and Lloyd, Peter and da Veiga, Tomas and Onaizah, Onaizah and Pompili, Cecilia and Chandler, James H. and Valdastri, Pietro},
 title = {Patient-Specific Magnetic Catheters for Atraumatic Autonomous Endoscopy},
 journal = {Soft Robotics},
@@ -65,6 +66,7 @@ eprint = {
   doi={10.1109/IROS45743.2020.9341250}}
 
 @ARTICLE{Pittiglio2023,
+  selected = {true},
   author={Pittiglio, Giovanni and Brockdorff, Michael and da Veiga, Tomas and Davy, Joshua and Chandler, James Henry and Valdastri, Pietro},
   journal={IEEE Transactions on Robotics}, 
   title={Collaborative Magnetic Manipulation via Two Robotically Actuated Permanent Magnets}, 
@@ -115,6 +117,7 @@ eprint = {
   doi={10.1109/ICRA.2018.8460822}}
 
 @ARTICLE{Pittiglio2023,
+  selected = {true},
   author={Pittiglio, Giovanni and Orekhov, Andrew L. and da Veiga, Tomas and Calò, Simone and Chandler, James H. and Simaan, Nabil and Valdastri, Pietro},
   journal={IEEE Robotics and Automation Letters}, 
   title={Closed Loop Static Control of Multi-Magnet Soft Continuum Robots}, 
@@ -135,6 +138,7 @@ eprint = {
   doi={10.1109/LRA.2023.3268588}}
 
 ﻿@Article{Pittiglio2023,
+selected = {true},
 author={Pittiglio, Giovanni
 and Chandler, James H.
 and da Veiga, Tomas
@@ -161,6 +165,7 @@ url={https://doi.org/10.1038/s44172-023-00098-9}
 }
 
 @INPROCEEDINGS{Pittiglio2023a,
+  selected = {true},
   author={Pittiglio, Giovanni and Mencattelli, Margherita and Dupont, Pierre E.},
   booktitle={2023 IEEE International Conference on Robotics and Automation (ICRA)}, 
   title={Magnetic Ball Chain Robots for Endoluminal Interventions}, 
