--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,6 +35,7 @@ abstract = {With the maturity of surgical robotic systems based on traditional r
 
 @article{Pittiglio2021,
 selected = {true},
+preview={soro22.jpg},
 author = {Pittiglio, Giovanni and Lloyd, Peter and da Veiga, Tomas and Onaizah, Onaizah and Pompili, Cecilia and Chandler, James H. and Valdastri, Pietro},
 title = {Patient-Specific Magnetic Catheters for Atraumatic Autonomous Endoscopy},
 journal = {Soft Robotics},
@@ -67,6 +68,7 @@ eprint = {
 
 @ARTICLE{Pittiglio2023,
   selected = {true},
+  preview={tro23.png},
   author={Pittiglio, Giovanni and Brockdorff, Michael and da Veiga, Tomas and Davy, Joshua and Chandler, James Henry and Valdastri, Pietro},
   journal={IEEE Transactions on Robotics}, 
   title={Collaborative Magnetic Manipulation via Two Robotically Actuated Permanent Magnets}, 
@@ -118,6 +120,7 @@ eprint = {
 
 @ARTICLE{Pittiglio2023,
   selected = {true},
+  preview={ral23.png},
   author={Pittiglio, Giovanni and Orekhov, Andrew L. and da Veiga, Tomas and Calò, Simone and Chandler, James H. and Simaan, Nabil and Valdastri, Pietro},
   journal={IEEE Robotics and Automation Letters}, 
   title={Closed Loop Static Control of Multi-Magnet Soft Continuum Robots}, 
@@ -139,6 +142,7 @@ eprint = {
 
 ﻿@Article{Pittiglio2023,
 selected = {true},
+preview={nature23.png},
 author={Pittiglio, Giovanni
 and Chandler, James H.
 and da Veiga, Tomas
@@ -166,6 +170,7 @@ url={https://doi.org/10.1038/s44172-023-00098-9}
 
 @INPROCEEDINGS{Pittiglio2023a,
   selected = {true},
+  preview={icra23.png},
   author={Pittiglio, Giovanni and Mencattelli, Margherita and Dupont, Pierre E.},
   booktitle={2023 IEEE International Conference on Robotics and Automation (ICRA)}, 
   title={Magnetic Ball Chain Robots for Endoluminal Interventions}, 
