--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -118,7 +118,7 @@ eprint = {
   pages={948-955},
   doi={10.1109/ICRA.2018.8460822}}
 
-@ARTICLE{Pittiglio2023,
+@ARTICLE{Pittiglio2023d,
   selected = {true},
   preview={ral23.png},
   author={Pittiglio, Giovanni and Orekhov, Andrew L. and da Veiga, Tomas and Calò, Simone and Chandler, James H. and Simaan, Nabil and Valdastri, Pietro},
@@ -140,7 +140,7 @@ eprint = {
   pages={3422-3429},
   doi={10.1109/LRA.2023.3268588}}
 
-﻿@Article{Pittiglio2023,
+﻿@Article{Pittiglio2023c,
 selected = {true},
 preview={nature23.png},
 author={Pittiglio, Giovanni
