--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,8 +56,8 @@ eprint = {
     abstract = { Despite increasing interest in minimally invasive surgical techniques and related developments in flexible endoscopes and catheters, follow-the-leader motion remains elusive. Following the path of least resistance through a tortuous and potentially delicate environment without relying on interaction with the surrounding anatomy requires the control of many degrees of freedom. This typically results in large-diameter instruments. One viable solution to obtain dexterity without increasing size is via multiple-point magnetic actuation over the length of the catheter. The main challenge of this approach is planning magnetic interaction to allow the catheter to adapt to the surrounding anatomy during navigation. We design and manufacture a fully shape-forming, soft magnetic catheter of 80 mm length and 2 mm diameter, capable of navigating a human anatomy in a follow-the-leader fashion. Although this system could be exploited for a range of endoscopic or intravascular applications, here we demonstrate its efficacy for navigational bronchoscopy. From a patient-specific preoperative scan, we optimize the catheters’ magnetization profiles and the shape-forming actuating field. To generate the required transient magnetic fields, a dual-robot arm system is employed. We fabricate three separate prototypes to demonstrate minimal contact navigation through a three-dimensional bronchial tree phantom under precomputed robotic control. We also compare a further four separate optimally designed catheters against mechanically equivalent designs with axial magnetization profiles along their length and only at the tip. Using our follow-the-leader approach, we demonstrate up to 50\% more accurate tracking, 50\% reduction in obstacle contact time during navigation over the state of the art, and an improvement in targeting error of 90\%. }
 }
 
-@INPROCEEDINGS{Pittiglio2020,
-  author={Pittiglio, Giovanni and Chandler, James H. and Richter, Michiel and Venkiteswaran, Venkatasubramanian K. and Misra, Sarthak and Valdastri, Pietro},
+@INPROCEEDINGS{2020,
+  author={, Giovanni and Chandler, James H. and Richter, Michiel and Venkiteswaran, Venkatasubramanian K. and Misra, Sarthak and Valdastri, Pietro},
   booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
   title={Dual-Arm Control for Enhanced Magnetic Manipulation}, 
   year={2020},
