--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -66,7 +66,7 @@ eprint = {
   pages={7211-7218},
   doi={10.1109/IROS45743.2020.9341250}}
 
-@ARTICLE{Pittiglio2023,
+@ARTICLE{Pittiglio2023_a,
   selected = {true},
   preview={tro23.png},
   author={Pittiglio, Giovanni and Brockdorff, Michael and da Veiga, Tomas and Davy, Joshua and Chandler, James Henry and Valdastri, Pietro},
@@ -118,7 +118,7 @@ eprint = {
   pages={948-955},
   doi={10.1109/ICRA.2018.8460822}}
 
-@ARTICLE{Pittiglio2023d,
+@ARTICLE{Pittiglio2023_b,
   selected = {true},
   preview={ral23.png},
   author={Pittiglio, Giovanni and Orekhov, Andrew L. and da Veiga, Tomas and Calò, Simone and Chandler, James H. and Simaan, Nabil and Valdastri, Pietro},
@@ -140,7 +140,7 @@ eprint = {
   pages={3422-3429},
   doi={10.1109/LRA.2023.3268588}}
 
-﻿@Article{Pittiglio2023c,
+﻿@Article{Pittiglio2023_c,
 selected = {true},
 preview={nature23.png},
 author={Pittiglio, Giovanni
@@ -168,7 +168,7 @@ doi={10.1038/s44172-023-00098-9},
 url={https://doi.org/10.1038/s44172-023-00098-9}
 }
 
-@INPROCEEDINGS{Pittiglio2023a,
+@INPROCEEDINGS{Pittiglio2023_d,
   selected = {true},
   preview={icra23.png},
   author={Pittiglio, Giovanni and Mencattelli, Margherita and Dupont, Pierre E.},
@@ -190,7 +190,7 @@ url={https://doi.org/10.1038/s44172-023-00098-9}
   pages={4998-5005},
   doi={10.1109/TAC.2020.3047553}}
 
-@INPROCEEDINGS{Pittiglio2023b,
+@INPROCEEDINGS{Pittiglio2023_e,
   author={Pittiglio, Giovanni and Mencattelli, Margherita and Dupont, Pierre E.},
   booktitle={2023 International Symposium on Medical Robotics (ISMR)}, 
   title={Closed-form Kinematic Model and Workspace Characterization for Magnetic Ball Chain Robots}, 
