--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -155,7 +155,7 @@ and McLaughlan, James
 and Pompili, Cecilia
 and Valdastri, Pietro},
 title={Personalized magnetic tentacles for targeted photothermal cancer therapy in peripheral lungs},
-journal={Communications Engineering},
+journal={Nature Communications Engineering},
 year={2023},
 month={Jul},
 day={27},
