--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -234,3 +234,13 @@ url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/aisy.202300062},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/aisy.202300062},
 abstract = {Soft magnetic manipulators offer the prospect of improved surgical outcomes through their potential for miniaturization and inherently safe tissue interaction. However, independent actuation of multiple manipulators within the same confined workspace is limited by undesired simultaneous actuation and manipulator–manipulator interactions. Herein, for the first time, approaches for the independent magnetic actuation of two magnetic continuum manipulators within the same confined workspace are proposed. A novel modular magnetic soft robot segment design is proposed with modified geometry to provide preferential bending planes and high angles of deflection. This design is integrated into two dual-segment magnetic manipulators which, when arranged in parallel, can deliver independent bending in two planes of motion. Two distinct independent control strategies are proposed, based on orthogonal manipulator magnetization profiles and local field gradient control, respectively. Each dual-manipulator configuration is characterized over a sequence of applied magnetic fields and gradients, induced via a dual robotically controlled external permanent magnet system. Manipulator independence, bending range of motion, and twisting behaviors are evaluated as a function of control strategy and manipulator separation distance. To demonstrate the system's potential in clinical scenarios, a dual-manipulator configuration is adapted to carry an endoscopic camera and optic fiber, respectively. The resultant bimanual system is deployed in the confined anatomy of a skull-base phantom to simulate minimally invasive ablation of a pituitary adenoma. Independent motion of the camera and tool within the confined workspace demonstrate the potential for an independent magnetic tool manipulation for surgical applications.}
 }
+
+@INPROCEEDINGS{Pittiglio2023_f,
+  author={Pittiglio, Giovanni and Mencattelli, Margherita and Donder, Abdulhamit and Chitalia, Yash and Dupont, Pierre E.},
+  booktitle={2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={Hybrid Tendon and Ball Chain Continuum Robots for Enhanced Dexterity in Medical Interventions}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={8461-8466},
+  doi={10.1109/IROS55552.2023.10341686}}
