--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -240,6 +240,7 @@ abstract = {Soft magnetic manipulators offer the prospect of improved surgical o
   booktitle={2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
   title={Hybrid Tendon and Ball Chain Continuum Robots for Enhanced Dexterity in Medical Interventions}, 
   year={2023},
+  month = {oct},
   volume={},
   number={},
   pages={8461-8466},
