--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,13 @@
+@misc{tamhankar2025autonomousnavigationneuroendovasculartools,
+      title={Towards Autonomous Navigation of Neuroendovascular Tools for Timely Stroke Treatment via Contact-aware Path Planning}, 
+      author={Aabha Tamhankar and Giovanni Pittiglio},
+      year={2025},
+      eprint={2502.15971},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2502.15971}, 
+}
+
 @article{da Veiga_2020,
 doi = {10.1088/2516-1091/ab9f41},
 url = {https://dx.doi.org/10.1088/2516-1091/ab9f41},
